# sztos_kwc

./: .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
SZTOS/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
accounts/: auth.py  models.py  urls.py  views.py
accounts/fixtures/: fixture.json
accounts/templates/auth/: login.html  signup.html
c/: setrlimit.c
judge/: admin.py  forms.py  models.py  storage.py  tasks.py  urls.py  views.py
judge/env/: c.py  cpp.py  python.py  runner.py  tasks.py
judge/migrations/: 0001_initial.py  0002_add_solution_state.py  0002_auto_20201025_1303.py  0002_testcase_memory_limit.py  0003_auto_20201024_1237.py  0003_solution_uuid.py  0004_auto_20201024_1246.py  0004_remove_solution_text.py  0005_auto_20200820_1139.py  0005_merge_20201025_1756.py  0005_solution_user.py  0006_auto_20200910_1053.py  0006_auto_20201108_1159.py  0006_user_solutions.py  0007_auto_20200910_1128.py  0008_auto_20200910_1130.py  0009_testrun.py  0010_auto_20200924_0957.py  0011_merge_20200924_1059.py  0012_auto_20200924_1108.py
judge/static/css/: judge.css
judge/templates/: base.html
judge/templates/errors/: 404.html
judge/templates/judge/: add_course.html  add_problem.html  add_test_case.html  course_add_students.html  course_create.html  course_delete.html  course_grades.html  course_update.html  courses.html  detail.html  index.html  problem_create.html  problem_delete.html  problem_grades.html  problem_update.html  problems.html  results.html  source.html  students.html  testcases.html  (+3 more)
judge/templatetags/: filters.py
(+2 files in other folders)
