[tool.poetry]
name = "SZTOS"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
Celery = "^4.4.6"
minio = "^6.0.0"
django-bootstrap4 = "^2.3.0"
django-bootstrap-breadcrumbs = "^0.9.2"
mistune = {version = "^2.0.0-alpha.5", allow-prereleases = true}

[tool.poetry.dev-dependencies]
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
